Fix hovercontainer going offscreen

--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -87,6 +87,7 @@ div#hover-container {
     background-color: white;
     padding: 0px 10px;
     margin: 1em;
+    width: max-content;
 }
 
 div#updater-container {
